--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.5.6"
+    "@astrojs/mdx": "^0.19.5",
+    "@astrojs/rss": "^2.4.3",
+    "@fontsource/atkinson-hyperlegible": "^5.0.2",
+    "astro": "^2.5.6",
+    "katex": "^0.16.7"
+  },
+  "devDependencies": {
+    "@types/katex": "^0.16.0"
   }
 }
