--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@astrojs/rss": "^2.4.3",
     "@fontsource/atkinson-hyperlegible": "^5.0.2",
     "astro": "^2.5.6",
-    "katex": "^0.16.7"
+    "katex": "^0.16.7",
+    "rehype-katex": "^6.0.3",
+    "remark-math": "^5.1.1"
   },
   "devDependencies": {
     "@types/katex": "^0.16.0"
