--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.14",
     "@fontsource/atkinson-hyperlegible": "^5.0.2",
     "astro": "^5.16.9",
     "katex": "^0.16.7",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-image-gallery": "^2.0.5",
     "rehype-katex": "^6.0.3",
     "remark-math": "^5.1.1"
   },
